2015-11-27  Ola Jeppsson  <ola@adapteva.com>

	* esim/esim.h (es_cluster_cfg): Add core_phys_mem member.
	(es_get_core_phys_mem_size): Add prototype.
	* esim/esim.c (es_addr_translate): Check that address is backed by
	physical memory.
	(es_validate_cluster_cfg): Validate core_phys_mem field in es_cluster.
	(es_dump_config): Print core_phys_mem.
	(es_get_core_phys_mem_size): New function.
	* sim-if.c (struct emesh_params): Add core_mem.
	(options_epiphany): Add '--e-core-mem' flag.
	(epiphany_mem_size_option_handler): Add case for E_OPTION_CORE_MEM.
	(sim_esim_init): Set core_phys_mem in cluster.
	* epiphany-elf-sim.py.in (pow_of_two): New function.
	(parse_or_die): Add '--core-mem' argument.

2015-11-27  Ola Jeppsson  <ola@adapteva.com>

	* sim-if.c (epiphany_mem_size_option_handler): New
	function. Supports 'K', 'M', and 'G' suffixes.
	(epiphany_option_handler): Remove E_OPTION_EXT_RAM_SIZE case.
	(options_epiphany): Use epiphany_mem_size_option_handler for
	E_OPTION_EXT_RAM_SIZE.
	* epiphany-elf-sim.py.in (breakwhen): New function.
	(not_number_part): Ditto.
	(parse_size): New function that can parse size arguments.
	(parse_or_die): Parse ext_ram_size with parse_size.

2015-11-26  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-sim.h (epiphanybf_fetchable_p): New function.
	* epiphany.c (epiphanybf_external_fetch_allowed_p): New function.
	* sim-if.c (enum epiphany_options): Add E_OPTION_EXTERNAL_FETCH.
	(options_epiphany): Add E_OPTION_EXTERNAL_FETCH entry.
	(epiphany_option_handler): Handle E_OPTION_EXTERNAL_FETCH,
	* sim-main.h (struct sim_state): Add external_fetch boolean.

2015-11-25  Ola Jeppsson  <ola@adapteva.com>

	* epiphany.c (epiphany_gie): Add insn_is_idle parameter.
	* epiphany-sim.h (epiphany_gie): Adjust function prototype.

2015-11-20  Ola Jeppsson  <ola@adapteva.com>

	* dv-epiphany_dma.c (epiphany_dma_hw_event_callback): Add raised
	interrupts to trace.
	* sim-main.h (SIM_ENGINE_HALT_HOOK): Warn if an peripheral is still
	active.
